# VU-Map-ML-model-25-26

./: .gitignore  AP-MAC.csv  main.py  network.py  pipeline.py  plots.py  pyproject.toml  requirements.txt  server.py  trajectory.py  util.py
data/: extras F5-APCount.csv  extras F5.csv  extras F6-APCount.csv  extras F6.csv  multilayer-test-targets.csv  samples F5.csv  samples F6.csv
data/old/: Enriched-YESNO-28-04-2024_23-04-50.csv  Samples F6 adjusted-27-04-2024_13-34-45.csv  Samples F6-27-04-2024_22-44-30.csv  adjusted.csv  incomplete.csv  nonadjusted.csv  yesno.csv
data/reference/: merged.csv
old/: model.py  model_tuner.py  multilayer-server.py  multilayer.py  neuralnet.py  neuralnet_test.py  transfer_learning.py
